--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ button.show-todos {
 }
 li::before {
     font-family: "Font Awesome 5 Free";
-    content: "/f0c8";
+    content: "◻︎ ";
     font-weight: 900;
     color: rgb(59, 59, 59);
     margin-right: 10px;
